# emils-demos

./: .gitignore  LICENSE  README.md  demo_sorter.py  events.txt  main.py  pyproject.toml  requirements.txt
data/: hltv_team_rankings.csv  map_name_to_id.csv  team_name_to_id.csv
models/: calibration_data.pkl  xgboost_model.pkl
notebooks/: model.ipynb  preprocess.ipynb  xgboost.ipynb
player_results/: 3dmax_weekly_stats.csv  500_weekly_stats.csv  9-pandas_weekly_stats.csv  9z_weekly_stats.csv  astralis_weekly_stats.csv  atox_weekly_stats.csv  aurora_weekly_stats.csv  b8_weekly_stats.csv  bcgame_weekly_stats.csv  bluejays_weekly_stats.csv  chinggis-warriors_weekly_stats.csv  complexity_weekly_stats.csv  ecstatic_weekly_stats.csv  ence_weekly_stats.csv  eternal-fire_weekly_stats.csv  eyeballers_weekly_stats.csv  faze_weekly_stats.csv  fluxo_weekly_stats.csv  flyquest_weekly_stats.csv  furia_weekly_stats.csv  g2_weekly_stats.csv  hotu_weekly_stats.csv  legacy_weekly_stats.csv  lynn-vision_weekly_stats.csv  m80_weekly_stats.csv  monte_weekly_stats.csv  natus-vincere_weekly_stats.csv  navi-junior_weekly_stats.csv  oddik_weekly_stats.csv  pain_weekly_stats.csv  passion-ua_weekly_stats.csv  red-canids_weekly_stats.csv  the-mongolz_weekly_stats.csv  vitality_weekly_stats.csv  wildcard_weekly_stats.csv
proposal/: main 2.fls  main.aux  main.fdb_latexmk  main.tex
scripts/: debug_page.html  html_parser.py  html_utils.py  map_stats_data.py  map_stats_utils.py  player_results_data.py  player_results_util.py  player_results_utils.py  ranking_data.py  ranking_utils.py  (+3 more)
(+299 files in other folders)
