[tool.poetry]
name = "csgo-match-prediction"
version = "0.1.0"
description = "Machine learning project for predicting CS2 match outcomes"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
numpy = "^1.24"
scikit-learn = "^1.3"
xgboost = "^2.0"
matplotlib = "^3.7"
seaborn = "^0.12"
cloudscraper = "^1.2"
beautifulsoup4 = "^4.12"
requests = "^2.31"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
jupyter = "^1.0"
ipykernel = "^6.25"

[tool.poetry.scripts]
csgo-ml = "src.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
